Remove unused test code, minor refactorings